modules/network/main.tf
resource "google_compute_network" "main" {
  name                    = "codechroniclenet"
  project                 = var.project_id
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "main" {
  name          = "codechroniclenet-subnet"
  project       = var.project_id
  region        = var.region
  network       = google_compute_network.main.id
  ip_cidr_range = "10.0.0.0/24"
}

resource "google_compute_firewall" "allow-https-cloudflare" {
  name    = "allow-https-cloudflare"
  project = var.project_id
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }

  source_ranges = [
    "173.245.48.0/20",
    "103.21.244.0/22",
    "103.22.200.0/22",
    "103.31.4.0/22",
    "141.101.64.0/18",
    "108.162.192.0/18",
    "190.93.240.0/20",
    "188.114.96.0/20",
    "197.234.240.0/22",
    "198.41.128.0/17",
    "162.158.0.0/15",
    "104.16.0.0/13",
    "104.24.0.0/14",
    "172.64.0.0/13",
    "131.0.72.0/22",
  ]

  target_tags = ["codechroniclenet-web"]
}

resource "google_compute_firewall" "allow-ssh-admin" {
  name    = "allow-ssh-admin"
  project = var.project_id
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = var.admin_ssh_cidrs
  target_tags   = ["codechroniclenet-web"]
}

resource "google_compute_firewall" "allow-ssh-iap" {
  name    = "allow-ssh-iap"
  project = var.project_id
  network = google_compute_network.main.name

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["35.235.240.0/20"]
  target_tags   = ["codechroniclenet-web"]
}
